<resources>
    <string name="action_settings">Settings</string>
    <string name="default_notification_channel_id">fypmoney</string>
    <string name="freshchat_file_provider_authority">com.fypmoney.provider</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="please_wait">Please wait</string>
    <string name="dreamFolksDb">pockket.db</string>
    <string name="no_internet">Your internet connection is down. Check it and connect again.</string>
    <string name="try_again_text">Try Again</string>
    <string name="fetching_reward">Fetching Rewards…</string>
    <string name="oo_error">Oh-Oh!</string>
    <string name="spin_wheel_heading">Spin the Wheel!🤑</string>
    <string name="spin_to_win">Spin</string>
    <string name="spin_wheel_error">Thank you for playing, we \'re sorry that you didn\'t win any Fyp Mynts today. Come back tomorrow and try your luck🤞. We\'re rooting for you!</string>
    <string name="rewards_history_view">Rewards History</string>
    <string name="better_luck_emoji">🤮</string>
    <string name="oops">You have already used your daily spin for today.\n\n Come back <b>TOMORROW</b> for another chance to win 💰</string>
    <string name="something_went_wrong_error">Something went wrong</string>
    <string name="something_went_wrong_error1">Something went wrong, please try again</string>
    <string name="internet_not_connected">Please check your internet connection</string>
    <string name="please_try_again_after_some_time">Please try after sometime</string>
    <string name="continue_btn_text">Continue</string>
    <string name="submit_btn_text">Submit</string>
    <string name="add_money_btn_text">Add Money</string>
    <string name="view_feeds">View Feeds</string>
    <string name="send_link_btn_text">Send link</string>
    <string name="remove_btn_text">Remove</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="leave_btn_text">Leave</string>
    <string name="add_member_btn_text">Add a Family Member</string>
    <string name="grant_permission_btn_text">Grant Permission</string>
    <string name="accept_btn_text">Accept</string>
    <string name="decline_btn_text">Decline</string>
    <string name="get_otp_btn_text">Get OTP</string>
    <string name="pay_btn_text">Pay</string>
    <string name="pay_money_btn_text">Pay Money</string>
    <string name="verify_btn_text">Verify</string>
    <string name="invite_btn_text">Invite</string>
    <string name="activate_account_btn_text">Activate Account</string>
    <string name="activate_card_btn_text">Activate Card</string>
    <string name="create_account_btn_text">Create Account</string>
    <string name="request_again_btn_text">Request again</string>
    <string name="add_btn_text">Add</string>
    <string name="add_verify_btn_text">Verify &amp; Add</string>
    <string name="retry_btn_text">Retry</string>
    <string name="view_details_btn_text">View details</string>
    <string name="dummy_star">"* * * *"</string>
    <string name="select_btn_text">Select</string>
    <string name="reject_btn_text">Reject</string>
    <string name="update_btn_text">Update</string>
    <string name="request_btn_text">Request</string>
    <string name="withdraw_btn_text">Withdraw</string>
    <string name="approve_pay_btn_text">Approve &amp; Pay</string>
    <string name="clear_btn_text">Clear</string>
    <string name="apply_btn_text">Apply</string>
    <string name="yes_btn_text">Yes</string>
    <string name="no_btn_text">No</string>
    <string name="save_btn_text">Save</string>
    <string name="log_out_btn_text">Log out</string>
    <string name="share_btn_text">Share</string>
    <string name="order_premium_card_btn_text">Order Physical Card</string>
    <string name="order_eco_friendly_card_btn_text">Order Eco-Friendly Card</string>
    <string name="place_order_btn_text">Place Order</string>
    <string name="got_it_btn_text">Got it</string>
    <string name="go_to_messages_btn_text">Go to Messages</string>
    <string name="set_or_change_pin_btn_text">Set or Change Pin</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp">OTP</string>
    <string name="sign_in_sign_up">Sign In/Sign Up</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="request_otp">Request OTP</string>
    <string name="continue_with">Continue with</string>
    <string name="phone_no_email">Mobile No. or Email Id</string>
    <string name="phone_email_empty_error">Please enter Mobile No</string>
    <string name="first_name_empty_error">Please enter first name</string>
    <string name="full_name_empty_error">Please enter your name</string>
    <string name="last_name_empty_error">Please enter last name</string>
    <string name="pan_empty_error">Please enter PAN number</string>
    <string name="pan_lenght_error">Enter correct PAN</string>
    <string name="aadhaar_lenght_error">Enter correct Aadhaar</string>
    <string name="address_empty_error">Please enter your Address</string>
    <string name="address_2_empty_error">Please enter your full Address</string>
    <string name="email_empty_error">Please enter email id </string>
    <string name="email_valid_error">Please enter valid email id </string>
    <string name="dob_empty_error">Please enter Date of Birth</string>
    <string name="gender_empty_error">Select your gender</string>
    <string name="kyc_empty_error">Select Kyc type</string>
    <string name="please_accept_terms_and_conditions">Please accept Terms and conditions</string>
    <string name="select_age_type">Please your age gap</string>
    <string name="otp_length_error">OTP length must be 6</string>
    <string name="phone_email_validity_error">Please enter valid Mobile No. or Email Id</string>
    <string name="continue_txt">Continue</string>
    <string name="phone_number">Phone number <font color='#ff434a'>*</font></string>
    <string name="no_internet_try_again">Not connected with internet, please try again</string>
    <string name="google_sign_in_failure">Google sign in failed.</string>
    <string name="back_to_login"><font fgcolor='#9CA3A5'>Back to &#032;</font>Log in</string>
    <string name="login"><font fgcolor='#231F20'>Log in</font></string>
    <string name="dialog_title_auth">Enter phone screen lock pattern, PIN, password or fingerprint</string>
    <string name="dialog_msg_auth">Unlock Fyp</string>
    <string name="name_title">Name :</string>
    <string name="contact_title">Contact : </string>
    <string name="contact_screen_title">Contacts</string>
    <string name="no_data_found">No Data Found</string>
    <string name="permission_required">Permission are required to access contacts</string>
    <string name="permission_camera_required">Permission are required to access camera</string>
    <string name="invite_link">Invite</string>
    <string name="pocket_user">Pocket User</string>
    <string name="fyper_txt">Fyper</string>
    <string name="contact_error">Please choose any contact to add as a member</string>
    <string name="empty_contact_error">Unable to fetch contacts. Add member by entering the contact number</string>
    <string name="select_member">Select a member</string>
    <string name="chore_title">Missions</string>
    <string name="chore_history_title">Chores History</string>
    <string name="assign_task">Assign missions and participate to get cash.</string>
    <string name="btn_text">Assign A Mission</string>
    <string name="btn_cont">Continue</string>
    <string name="create_task">Choose a task or create one</string>
    <string name="chores_error">Something went wrong.</string>
    <string name="sub_title1">Your Missions</string>
    <string name="sub_title2">Assigned Missions</string>
    <string name="chores_history">Show missions history</string>
    <string name="chores_accept">Accept</string>
    <string name="chores_reject">Reject</string>
    <string name="in_process">In process</string>
    <string name="complete_btn">Completed</string>
    <string name="cmnt_here">Comment here</string>
    <string name="good_job">Good job!</string>
    <string name="yay">Yay!</string>
    <string name="whoop">Whoops!</string>
    <string name="oop">Ooops!</string>
    <string name="spin_wheel_text1">Mynts you have won</string>
    <string name="spin_wheel_text2">How to use Mynts?</string>
    <string name="spin_wheel_text3">Show Mynts history</string>
    <string name="fyp_coin_value">1  Mynt = ₹1</string>
    <string name="spin_wheel_text4">Total Mynts won will be converted into rupees once you redeem it</string>
    <string name="show_fyp_history">Show Mynts history</string>
    <string name="better_luck">You have already used your daily spin for today.\n Come back <b>TOMORROW</b> for another chance to win 💰</string>
    <string name="well_done">Well done!</string>
    <string name="request_again">Request Again</string>
    <string name="succesfully_assigned">You have successfully assigned the task to Ankush bro.</string>
    <string name="successfully_job">You have successfully completed your task. Stay tuned you will get your cash soon.</string>
    <string name="hey_champ">Hey Champ you have done a great job! I am proud of you. 👏</string>
    <string name="can_see">You can see this in your rewards section.</string>
    <string name="looks_like">Looks like your dad has rejected your task completion reward.</string>
    <string name="create_own_task">Create your own Mission</string>
    <string name="title_hint">Title</string>
    <string name="desc_hint">Description</string>
    <string name="time_limit_hint">Time limit</string>
    <string name="assign_to">Assign a mission to</string>
    <string name="home_bottom_nav_title">Home</string>
    <string name="feeds_bottom_nav_title">Feed</string>
    <string name="card_bottom_nav_title">Card</string>
    <string name="store_bottom_nav_title">Store</string>
    <string name="fyper_bottom_nav_title">Fyper</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="add_new_card_title">Add New Card</string>
    <string name="add_new_card_name">Name on Card</string>
    <string name="add_new_card_expiry">Expiry date</string>
    <string name="add_new_card_cvv">CVV</string>
    <string name="add_new_card_expiry_hint">MM/YY</string>
    <string name="add_new_card_save_option">Save this option for faster payments</string>
    <string name="card_number_format">xxxx-xxxx-xxxx-xxxx</string>
    <string name="add_upi_title">Add Existing UPI ID</string>
    <string name="upi_id">UPI ID</string>
    <string name="upi_id_hint">Your UPI ID</string>
    <string name="upi_id_hint1">UPI ID is in the format of mobilenumber@bank or username@bank</string>
    <string name="save_upi_id">Save this UPI ID for faster payments</string>
    <string name="filter_by_date_title">Filter by date</string>
    <string name="from_date">From date</string>
    <string name="to_date">To date</string>
    <string name="filter_by_date_text">You will be able to see transactions between these dates</string>
    <string name="bill_details">Bill Details</string>
    <string name="card_type">Premium Fyp Card</string>
    <string name="item_total">Item Total</string>
    <string name="packaging">Packaging</string>
    <string name="delivery_fee">Delivery Partner Fee</string>
    <string name="tax">Taxes</string>
    <string name="dummy_amount1">\u20B9 200</string>
    <string name="rewards">Rewards</string>
    <string name="explore">F-Store</string>
    <string name="title_home">Home</string>
    <string name="preferred_upi_id">Preferred UPI ID</string>
    <string name="insights">Insights</string>
</resources>