<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.fypmoney.view.home.main.home.view.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.fypmoney.view.home.main.explore.view.ExploreFragment"
        android:label="@string/explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_rewards"
        android:name="com.fypmoney.view.home.main.rewards.view.RewardsFragment"
        android:label="@string/rewards"
        tools:layout="@layout/fragment_rewards" />

    <fragment
        android:id="@+id/navigation_fyper"
        android:name="com.fypmoney.view.home.main.fyper.view.FyperFragment"
        android:label="@string/fyper_txt"
        tools:layout="@layout/fragment_fyper" />
</navigation>