<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/screenMarginLeft"
        android:paddingEnd="@dimen/screenMarginRight">

        <View
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/curved_background1" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/verification_title"
            style="@style/TextviewRegular"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/add_new_card_title"
            android:textColor="@color/text_color_dark"
            android:textSize="17dp" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/enter_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_rounded_rectangle_shape_solid_gray"
            android:hint="@string/card_number_format"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/name_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_rounded_rectangle_shape_solid_gray"
            android:hint="@string/add_new_card_name"
            android:inputType="text"
            android:maxLength="26"
            android:padding="10dp"
            android:singleLine="true" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/expiry"
            style="@style/TextviewRegular"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/add_new_card_expiry" />


        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/expiryValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_text_rounded_rectangle_shape_solid_gray"
                android:hint="@string/add_new_card_expiry_hint"
                android:inputType="number"
                android:maxLength="5"
                android:padding="10dp"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/cvv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_rounded_rectangle_shape_solid_gray"
                android:hint="@string/add_new_card_cvv"
                android:maxLength="3"
                android:inputType="number"
                android:padding="10dp"
                />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/saveCardCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/add_new_card_save_option" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinue"
            style="@style/Widget.App.Button"
            android:layout_width="299dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/curved_background1"
            android:text="@string/add_btn_text"
            android:textAllCaps="false"
            app:backgroundTint="@color/text_color_dark" />

    </LinearLayout>
</layout>

