<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/screenMarginLeft"
        android:paddingEnd="@dimen/screenMarginRight">

        <View
            android:id="@+id/view"
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/curved_background1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bill_details"
            style="@style/TextviewBold"
            android:layout_width="wrap_content"
            android:layout_below="@+id/view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/bill_details"
            android:textAlignment="center"
            android:textSize="20dp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/card_type"
            style="@style/TextviewRegular"
            android:layout_width="wrap_content"
            android:layout_below="@+id/bill_details"
            android:layout_marginTop="20dp"
            android:text="@string/card_type"
            android:textAlignment="center" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/amount"
            style="@style/TextviewRegular"
            android:layout_width="wrap_content"
            android:layout_below="@+id/bill_details"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:text="@string/dummy_amount1"
            android:textAlignment="center" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/amount"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/dividerColor" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/view1"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">


            <TableRow android:padding="5dp">

                <TextView
                    style="@style/TextviewRegular"
                   android:layout_weight="1"
                    android:text="@string/item_total" />

                <TextView
                    style="@style/TextviewRegular"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/item_total" />



            </TableRow>

            <TableRow android:padding="5dp">

                <TextView
                    style="@style/TextviewRegular"
                    android:layout_weight="1"
                    android:text="@string/packaging" />

                <TextView
                    style="@style/TextviewRegular"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/item_total" />


            </TableRow>

            <TableRow android:padding="5dp">

                <TextView
                    style="@style/TextviewRegular"
                    android:layout_weight="1"
                    android:text="@string/delivery_fee" />

                <TextView
                    style="@style/TextviewRegular"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/item_total" />

            </TableRow>
            <TableRow android:padding="5dp">

                <TextView
                    style="@style/TextviewRegular"
                    android:layout_weight="1"
                    android:text="@string/tax" />

                <TextView
                    style="@style/TextviewRegular"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/dummy_amount1" />

            </TableRow>
        </TableLayout>
    </RelativeLayout>
</layout>