<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/screenMarginLeft"
        android:paddingEnd="@dimen/screenMarginRight"
        android:paddingBottom="@dimen/dp16">

        <View
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/curved_background1" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/verification_title"
            style="@style/TextviewRegular"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/filter_by_date_title"
            android:textColor="@color/text_color_dark"
            android:textSize="17dp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/heading"
            style="@style/TextviewRegular"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/from_date" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/from_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_rounded_rectangle_shape_solid_gray"
            android:drawableEnd="@drawable/calender"
            android:hint="@string/dd_mm_yyyy"
            android:inputType="text"
            android:maxLength="26"
            android:padding="10dp"
            android:singleLine="true" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/heading1"
            style="@style/TextviewRegular"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/to_date" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/to_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_rounded_rectangle_shape_solid_gray"
            android:drawableEnd="@drawable/calender"
            android:hint="@string/dd_mm_yyyy"
            android:inputType="text"
            android:maxLength="26"
            android:padding="10dp"
            android:singleLine="true" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/expiry"
            style="@style/TextviewRegular"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="47dp"
            android:padding="10dp"
            android:text="@string/filter_by_date_text"
            android:textAlignment="center" />


        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/clear_text"
                style="@style/TextviewRegular"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/clear_btn_text"
                android:textColor="@color/text_color_dark"
                android:textSize="@dimen/textSize_18" />

            <Button
                android:id="@+id/button_apply"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="0.5"
                android:paddingVertical="15dp"
                android:text="@string/apply_btn_text"
                android:textAllCaps="false" />

        </LinearLayout>
    </LinearLayout>
</layout>

