<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/screenMarginLeft"
        android:paddingEnd="@dimen/screenMarginRight">

        <View
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/curved_background1" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/verification_title"
            style="@style/TextviewRegular"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/add_upi_title"
            android:textColor="@color/text_color_dark"
            android:textSize="17dp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/heading"
            style="@style/TextviewRegular"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/upi_id" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/upiId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_rounded_rectangle_shape_solid_gray"
            android:hint="@string/upi_id_hint"
            android:inputType="text"
            android:maxLength="100"
            android:padding="10dp"
            android:singleLine="true" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/expiry"
            style="@style/TextviewRegular"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/upi_id_hint1"
            android:textAlignment="center" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/preffered_upi_tv"
            style="@style/TextviewRegular"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="12dp"
            android:text="@string/preferred_upi_id" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/upi_list_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp8"
            android:paddingBottom="1dp"
            android:paddingTop="1dp"
            app:customIsRounded="@{false}"
            app:customCornerRadius="@{@dimen/dp8}"
            app:customStrokeWidth="@{@dimen/dp1}"
            app:customStrokeColor="@{@color/dividerColor}">

            <androidx.recyclerview.widget.RecyclerView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:id="@+id/savedRv"
                android:layout_height="wrap_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>




        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name"
            style="@style/TextviewRegular"
            android:layout_height="wrap_content" />




        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/verifyButton"
            style="@style/TextviewRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/border_background2"
            android:padding="15dp"
            android:text="@string/verify_btn_text"
            android:visibility="gone"
            android:textAlignment="center"
            android:textColor="@color/text_color_dark"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/saveCardCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:visibility="gone"
            android:text="@string/save_upi_id" />

        <Button
            android:id="@+id/btnAdd"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/add_verify_btn_text"
            android:textAllCaps="false"
            app:backgroundTint="@color/text_color_dark" />

    </LinearLayout>
</layout>

